# rust_ebpf

./: README.md
docs/: rust-ebpf-type-safe-kernel-instrumentation.md  xdp.md
examples/tracepoint/klog_sniff/: Cargo.toml
examples/tracepoint/klog_sniff/klog_sniff/: Cargo.toml
examples/tracepoint/klog_sniff/klog_sniff-common/: Cargo.toml
examples/tracepoint/klog_sniff/klog_sniff-ebpf/src/: main.rs
examples/tracepoint/klog_sniff/klog_sniff/src/: main.rs
progs/tracepoint/klog_sniff/: LICENSE-APACHE  LICENSE-MIT  README.md
progs/tracepoint/klog_sniff/klog_sniff/: build.rs
progs/tracepoint/klog_sniff/klog_sniff-ebpf/: Cargo.toml
progs/uprobe-malloc/: LICENSE-APACHE  LICENSE-MIT  NOTE.md  README.md
